# 2D_geometry_constraint_solver

./: .clang-format  .clangd  .git_commit_msg_template  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  conanfile.py  devenv.nix  devenv.yaml  pyproject.toml.template
conan_profiles/Linux/: LinuxClangStd20DebugProfile  LinuxClangStd20ReleaseProfile  LinuxClangStd23DebugProfile  LinuxGccStd20DebugProfile  LinuxGccStd20ReleaseProfile
doc/: milestones.md
gui/: CMakeLists.txt
gui/src/: application.cpp  application.hpp  canvas.cpp  canvas.hpp  canvas_types.hpp  constraint_model.cpp  constraint_model.hpp  decomposition_canvas.cpp  decomposition_canvas.hpp  decomposition_view.cpp  decomposition_view.hpp  dr_plan_canvas.cpp  dr_plan_canvas.hpp  graph_renderer.cpp  graph_renderer.hpp  main.cpp  main_window.cpp  main_window.hpp  model_serializer.cpp  model_serializer.hpp  model_static_canvas.cpp  model_static_canvas.hpp  modeller_view.cpp  modeller_view.hpp  solver_properties_panel.cpp  solver_properties_panel.hpp  solver_step_canvas.cpp  solver_step_canvas.hpp  solving_view.cpp  solving_view.hpp  stree_canvas.cpp  stree_canvas.hpp
include/: graph_render.hpp
include/constraint_solver/: pipeline.hpp
include/rendering/: graph_render.hpp
include/utils/: graph.hpp
scripts/python_gui/: CLAUDE.md  gtkapplication.py  main_render_loop.py
scripts/python_gui/GcsGui/: __init__.py  mainwindow.py
scripts/python_gui/GcsGui/common/: commondatastructs.py
scripts/python_gui/GcsGui/model/: drawmodel.py  gcs.py
scripts/python_gui/GcsGui/view/: drawmodelview.py  gcsview.py
scripts/python_gui/themes/: custom.css
src/: main.cpp
src/common/common/: common_uuid.cpp  common_uuid.hpp
src/constraint_solver/: CMakeLists.txt  constraint_equation_solver.cpp  constraint_equation_solver.hpp  constraints.cpp  constraints.hpp  elements.cpp  elements.hpp  geometric_constraint_system.cpp  geometric_constraint_system.hpp  json_constraint_graph_loader.cpp  json_constraint_graph_loader.hpp
src/constraint_solver/cmake/: GcsConfig.cmake.in
src/constraint_solver/includes/gcs/: export.hpp
src/constraint_solver/includes/gcs/decomposition/bottom_up/: bottom_up_reducer.hpp  bottom_up_strategy.hpp  cluster_types.hpp  plan_node.hpp  producer_map.hpp
src/constraint_solver/includes/gcs/decomposition/top_down/: stree_top_down_strategy.hpp
src/constraint_solver/includes/gcs/model/: constraints.hpp  elements.hpp  gcs_data_structures.hpp  solve_result.hpp
src/constraint_solver/includes/gcs/orchestration/: geometric_constraint_system.hpp  solving_strategy.hpp
src/constraint_solver/src/: component_solver.hpp  constraints.cpp  constraints.hpp  elements.cpp  gcs_data_structures.cpp  gcs_data_structures.hpp  geometric_constraint_system.cpp  geometric_constraint_system.hpp
src/constraint_solver/src/decomposition/bottom_up/: bottom_up_reducer.cpp  bottom_up_reducer.hpp  bottom_up_strategy.cpp  bottom_up_strategy.hpp  cluster_graph.cpp  cluster_graph.hpp  cluster_types.hpp  edge_primitive_plan.cpp  edge_primitive_plan.hpp  initial_edge_clusters.cpp  initial_edge_clusters.hpp  initial_triangle_reduction.cpp  initial_triangle_reduction.hpp  local_six_cycle_search.cpp  local_six_cycle_search.hpp  merge_plan_builder.cpp  merge_plan_builder.hpp  plan_node.hpp  producer_map.hpp  producer_update.cpp  producer_update.hpp  six_cycle_witness.cpp  six_cycle_witness.hpp  triangle_primitive_plan.cpp  triangle_primitive_plan.hpp
src/constraint_solver/src/decomposition/top_down/: stree_top_down_strategy.cpp  stree_top_down_strategy.hpp
src/constraint_solver/src/equations/: equation_primitives.hpp  newton_raphson.hpp
src/constraint_solver/src/model/: constraints.cpp  constraints.hpp  elements.cpp  elements.hpp  gcs_data_structures.cpp  solve_result.hpp
src/constraint_solver/src/orchestration/: geometric_constraint_system.cpp  geometric_constraint_system.hpp  solving_strategy.hpp
src/constraint_solver/src/solvers/: heuristics.hpp  line_angle_solvers.cpp  line_angle_solvers.hpp  point_line_solvers.cpp  point_line_solvers.hpp  point_point_solvers.cpp  point_point_solvers.hpp  subproblem_solver_concept.hpp
src/constraint_solver/src/solving/: bottom_up_plan_solver.cpp  bottom_up_plan_solver.hpp  component_solver.hpp
src/constraint_solver/src/solving/bottom_up/: merge3_case_solver.hpp  merge3_fallback_solver.cpp  merge3_fallback_solver.hpp  merge3_llp_solver.cpp  merge3_llp_solver.hpp  merge3_lpp_solver.cpp  merge3_lpp_solver.hpp  merge3_pll_solver.cpp  merge3_pll_solver.hpp  merge3_ppp_solver.cpp  merge3_ppp_solver.hpp  merge3_solver_common.cpp  merge3_solver_common.hpp  plan_pose_types.hpp
src/constraint_solver/src/solving/equations/: newton_raphson.hpp
src/constraint_solver/src/solving/solvers/: heuristics.hpp  line_angle_solvers.cpp  line_angle_solvers.hpp  point_line_solvers.cpp  point_line_solvers.hpp  point_point_solvers.cpp  point_point_solvers.hpp  subproblem_solver_concept.hpp
src/imgui_rendering/: graph_render.cpp
src/python_bindings/: constraint_graph_converter.cpp  constraint_graph_converter.hpp  constraint_graph_handle.cpp  constraint_graph_handle.hpp  constraint_graph_handle_binding.cpp  equation_system_solver_binding.cpp  simple_constraint_graph.cpp  simple_constraint_graph.hpp  simple_constraint_graph_binding.cpp
src/structures/: CMakeLists.txt
src/structures/include/: graph.hpp  graph_algorithms.hpp  separation_pairs.hpp  simple_graph.hpp
src/structures/include/structures/: binary_tree.hpp  general_tree.hpp  graph.hpp  graph_algorithms.hpp  graph_errors.hpp  property_map.hpp  separation_pairs.hpp  simple_graph.hpp  tree_errors.hpp
src/utils/: equation.cpp  equation.hpp  graph.cpp  graph.hpp
src/utils/graphs/: graph_interface.hpp
src/utils/graphs/graph_impls/: default.hpp  default.tpp  ogdf_wrapper.hpp
